@@ -396,12 +396,12 @@ UnixLib is part of the GCCSDK deliverables which can be found at
 In case you want to better understand the UnixLib building process as part
 of the GCCSDK build, the following information could be helpful.
 
-The Perl script recipe/scrips/reconf-libunixlib-01 is used to create
+The script recipe/scrips/reconf-libunixlib is used to create
 libunixlib/Makefile.ac based on all the C, header and assembler files in the
 libunixlib directory and its subdirectories.  When you add/remove source
 files during your development, you can make those changes in the generated
 Makefile.ac file as well (despite this file being generated by
-recipe/scripts/reconf-libunixlib-02 and not in source control) as the Makefile
+recipe/scripts/reconf-libunixlib and not in source control) as the Makefile
 used to do the actually build (and derived from Makefile.ac) will check this
 and be automatically regenerated before the actual build.
 
